strange bug where alignmenty only performs the second most recent action you have done. It was a chore to figure out what was even happening. still dont know whats up, but im considering incorperating origin into textblockposition considering its very related and not used in many places.

--- a/frontend/src/app/components/map-config/map-config.component.scss
+++ b/frontend/src/app/components/map-config/map-config.component.scss
@@ -66,6 +66,10 @@
     justify-content: center;
     align-items: center;
     position: absolute;
+    font-weight: 300;
+    // width: auto;
+    // height: auto;
+    // overflow: auto;
     top: 0;
     left: 0;
 }
